--- a/Pepe.css
+++ b/Pepe.css
@@ -1,3 +1,18 @@
+#geral{
+    width: 500px;
+    background-color: #FFF1B7;
+    color: black;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#titulo{
+    font-size: 50px;
+    color: #103149;
+    text-align: center;
+    text-shadow: 1px 1px 0px black;
+}
+
 #pokeball{
   color: black;
   background-color: white;
