--- a/Pepe.css
+++ b/Pepe.css
@@ -16,7 +16,7 @@
 #pokeball{
   color: black;
   background-color: white;
-  tranform: scale(0.1, 0.1);
+  transform: scale(0.1, 0.1);
 }
 
 #pokeball:hover{
