--- a/Pepe.css
+++ b/Pepe.css
@@ -13,14 +13,37 @@ img:hover{
   height: auto;
 }
 
-#a {
-  display: block;
+div {
+display: inline-block;
+margin: 30px;
+font-weight: bold;
 }
 
-#a:hover + #b {
-  display:block;
+#content {
+width: 160px;
+height: 160px;
+background-color: rgb(255, 0, 0);
+}
+
+#a, #b {
+width: 100px;
+height: 100px;
+line-height: 100px;
+text-align: center;
+}
+
+#a {
+color: rgb(255, 0, 0);
+background-color: rgb(255, 255, 0);
+cursor: pointer;
 }
 
 #b {
-  display:none;
-  }
+display: none;
+color: rgb(255, 255, 255);
+background-color: rgb(0, 0, 255);
+}
+
+#a:hover < #content + #b {
+display: inline-block;
+}
