--- a/Pepe.css
+++ b/Pepe.css
@@ -20,30 +20,31 @@ font-weight: bold;
 }
 
 #content {
-width: 160px;
-height: 160px;
+width: 100px;
+height: 100px;
 background-color: rgb(255, 0, 0);
 }
 
-#a, #b {
+#a {
 width: 100px;
 height: 100px;
 line-height: 100px;
 text-align: center;
-}
-
-#a {
 color: rgb(255, 0, 0);
 background-color: rgb(255, 255, 0);
 cursor: pointer;
 }
 
 #b {
+width: 500px;
+height: 500px;
+line-height: 500px;
+text-align: center;
 display: none;
 color: rgb(255, 255, 255);
 background-color: rgb(0, 0, 255);
 }
 
-#a:hover < #content + #b {
+#a:hover #b {
 display: inline-block;
 }
