--- a/Pepe.css
+++ b/Pepe.css
@@ -14,37 +14,24 @@ img:hover{
 }
 
 div {
-display: inline-block;
-margin: 30px;
-font-weight: bold;
-}
-
-#content {
-width: 100px;
-height: 100px;
-background-color: rgb(255, 0, 0);
+  display: inline-block;
 }
 
 #a {
-width: 100px;
-height: 100px;
-line-height: 100px;
-text-align: center;
-color: rgb(255, 0, 0);
-background-color: rgb(255, 255, 0);
-cursor: pointer;
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
 }
 
 #b {
-width: 500px;
-height: 500px;
-line-height: 500px;
-text-align: center;
-display: none;
-color: rgb(255, 255, 255);
-background-color: rgb(0, 0, 255);
+  width: 500px;
+  height: 500px;
+  display: none;
 }
 
 #a:hover #b {
-display: inline-block;
+  z-index: 100;
+  position: absolute;
+  display: inline-block;
+  transition: .5s ease-out;
 }
