--- a/Pepe.css
+++ b/Pepe.css
@@ -1,16 +1,37 @@
-div {
-  display: inline-block;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-#t1, #t2, #t3, #t4, #t5{
-  height: 100px;
+.flip-card {
+  background-color: transparent;
   width: 100px;
+  height: 100px;
 }
 
-#t1:hover, #t2:hover, #t3:hover, #t4:hover, #t5:hover{
-  height: 400px;
-  width: 400px;
-  transition: .8s;
-  vertical-align: top;
-  z-index: 30;
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  color: black;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
 }
