--- a/Pepe.css
+++ b/Pepe.css
@@ -5,7 +5,8 @@ body {
 .flip-card {
   background-color: transparent;
   width: 100px;
-  height: 100px;
+  height: 500px;
+  display: inline-block;
 }
 
 .flip-card-inner {
@@ -23,15 +24,17 @@ body {
 
 .flip-card-front, .flip-card-back {
   position: absolute;
-  width: 100%;
-  height: 100%;
   backface-visibility: hidden;
 }
 
 .flip-card-front {
+  width: 100px;
+  height: 100px;
   color: black;
 }
 
 .flip-card-back {
+  width: 500px;
+  height: 500px;
   transform: rotateY(180deg);
 }
