--- a/fichaOP.css
+++ b/fichaOP.css
@@ -3,9 +3,11 @@ h1{
   font-size: 16px;
   color: #E32636;
   font-weight: bold;
+  margin: 0px;
 }
 
 p{
   font-style: italic;
   text-align: justify;
+  margin: 0px;
 }
