--- a/fichaOP.css
+++ b/fichaOP.css
@@ -1,12 +1,15 @@
-h1{
-  text-align: center;
-  font-size: 16px;
-  color: #E32636;
-  font-weight: bold;
-  margin: 0px;
+.ficha{
 }
 
-p{
+.ficha h1{
+  text-align: center;
+  font-size: 18px;
+  color: #E32636;
+  font-weight: bold;
+  margin: 0px; !important
+}
+
+.ficha p{
   font-style: italic;
   text-align: justify;
   margin: 0px;
